@@ -1,3 +1,7 @@
+2018-04-05  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (cmd_change_password): Care admin-less mode.
+
 2018-04-04  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* tests: Add more tests, key generation and KDF support.
